--- a/wp-content/themes/lbilimited/scss/partials/_single.scss
+++ b/wp-content/themes/lbilimited/scss/partials/_single.scss
@@ -271,6 +271,12 @@ body.single {
 			font-weight: 300;
 			max-width: 920px;
 			margin: 0 auto;
+			@media (min-width: 900px){
+				padding: 0px 70px;
+			}
+			@media(min-width: 1300px){
+				padding: 0px;
+			}
 		}
 		
 	}
